# civis-backend-policy-analyser

./: .gitignore  README.md  ai_requirements.in  alembic.ini  docker-compose.yml  makefile  pyproject.toml  requirements.txt
src/civis_backend_policy_analyser/alembic/: env.py
src/civis_backend_policy_analyser/alembic/versions/: 0949d13c00ec_creating_document_type_and_assessment_.py  76733c59ca0e_prompt_assesmentarea_and_documenttype_.py  b19b30e8e9be_assesmentarea_and_documenttype_schema_.py  e018bbf19ddb_assesmentarea_and_prompt_schema_updated_.py
src/civis_backend_policy_analyser/api/: README.md  app.py  assessment_area_router.py  document_type_router.py  prompt_router.py
src/civis_backend_policy_analyser/core/: db_connection.py  document_agent.py  model.py  vector_db_store.py
src/civis_backend_policy_analyser/models/: README.md  __init__.py  assessment_area.py  assessment_area_prompt.py  document_type.py  document_type_assessment_area.py  prompt.py
src/civis_backend_policy_analyser/schemas/: README.md  assessment_area_schema.py  base_model.py  document_type_schema.py  prompt_schema.py
src/civis_backend_policy_analyser/utils/: constants.py
src/civis_backend_policy_analyser/views/: README.md  assessment_area_view.py  base_view.py  document_type_view.py  prompt_view.py
